Add eurika to connect servisec, improvement